Modulo Cadastro: fim das implementações